Fix side bar image contrast error in wave access tool to background of logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ p {
 
 /* history side bar image */
 .historyimg {
-  background-color: grey;
+  background-color: #253439;
   width: 50%;
   padding: 10px;
 }
